ingress/allow-homepage-to-uptime-kuma.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-homepage-to-uptime-kuma
  namespace: uptime-kuma
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homepage
          podSelector:
            matchLabels:
              app: homepage
